test(controller): refactor BookControllerTest and HomeControllerTest to use reactive mocks and WebTestClient