@@ -1,156 +1,266 @@
+/**
+ * Test suite for BookController REST API endpoints
+ * 
+ * @author William Callahan
+ */
 package com.williamcallahan.book_recommendation_engine.controller;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.AfterEach;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.List;
-import java.util.Optional;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.reset;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 import static org.hamcrest.Matchers.*;
-import com.williamcallahan.book_recommendation_engine.controller.BookController;
-import com.williamcallahan.book_recommendation_engine.service.BookService;
+import com.williamcallahan.book_recommendation_engine.service.BookCacheService;
 import com.williamcallahan.book_recommendation_engine.model.Book;
-import com.williamcallahan.book_recommendation_engine.exception.ResourceNotFoundException;
+import java.util.Collections;
+import org.springframework.boot.test.context.TestConfiguration;
+import org.springframework.context.annotation.Bean;
+import org.mockito.Mockito;
+import static org.mockito.ArgumentMatchers.anyString;
+import com.williamcallahan.book_recommendation_engine.service.RecommendationService;
+import com.williamcallahan.book_recommendation_engine.service.RecentlyViewedService;
+import com.williamcallahan.book_recommendation_engine.service.image.BookImageOrchestrationService;
+import com.williamcallahan.book_recommendation_engine.types.CoverImageSource;
+import com.williamcallahan.book_recommendation_engine.types.ImageResolutionPreference;
+import org.springframework.web.reactive.function.client.WebClient;
+import reactor.core.publisher.Mono;
+import java.util.concurrent.CompletableFuture;
 
 @WebMvcTest(BookController.class)
 class BookControllerTest {
+
+    @TestConfiguration
+    static class BookControllerTestConfiguration {
+
+        @Bean
+        public BookCacheService bookCacheService() {
+            return Mockito.mock(BookCacheService.class);
+        }
+
+        @Bean
+        public RecommendationService recommendationService() {
+            return Mockito.mock(RecommendationService.class);
+        }
+
+        @Bean
+        public RecentlyViewedService recentlyViewedService() {
+            return Mockito.mock(RecentlyViewedService.class);
+        }
+
+        @Bean
+        public BookImageOrchestrationService bookImageOrchestrationService() {
+            return Mockito.mock(BookImageOrchestrationService.class);
+        }
+
+        @Bean
+        public WebClient.Builder webClientBuilder() {
+            WebClient.Builder builderMock = Mockito.mock(WebClient.Builder.class);
+            WebClient clientMock = Mockito.mock(WebClient.class);
+            Mockito.when(builderMock.baseUrl(anyString())).thenReturn(builderMock);
+            Mockito.when(builderMock.build()).thenReturn(clientMock);
+            return builderMock;
+        }
+    }
+
   @Autowired
   private MockMvc mockMvc;
 
   @Autowired
   private ObjectMapper objectMapper;
 
-  @MockBean
-  private BookService bookService;
+  @Autowired
+  private BookCacheService bookCacheService;
+
+  @Autowired
+  private RecommendationService recommendationService;
+  
+  @Autowired
+  private BookImageOrchestrationService bookImageOrchestrationService; 
 
   @AfterEach
   void tearDown() {
-    reset(bookService);
+    reset(bookCacheService, recommendationService, bookImageOrchestrationService); 
+  }
+
+  @org.junit.jupiter.api.BeforeEach
+  void commonMockSetup() {
+    when(bookImageOrchestrationService.getBestCoverUrlAsync(any(Book.class), any(CoverImageSource.class), any(ImageResolutionPreference.class)))
+        .thenAnswer(invocation -> {
+            Book book = invocation.getArgument(0);
+            return CompletableFuture.completedFuture(book);
+        });
+  }
+
+  /**
+   * Creates a test book with basic properties for testing
+   *
+   * @param id The Google Books ID to assign
+   * @param title Book title
+   * @param author Book author name
+   * @return Configured book instance
+   */
+  private Book createTestBook(String id, String title, String author) {
+      Book book = new Book();
+      book.setId(id);
+      book.setTitle(title);
+      book.setAuthors(List.of(author));
+      book.setDescription("Test description for " + title);
+      book.setCoverImageUrl("http://example.com/cover/" + (id != null ? id : "new") + ".jpg");
+      book.setImageUrl("http://example.com/image/" + (id != null ? id : "new") + ".jpg");
+      return book;
   }
 
   @Test
-  @DisplayName("GET /books - empty list returns 200 and []")
-  void getAllBooks_emptyList_returnsEmptyArray() throws Exception {
-    when(bookService.getAllBooks()).thenReturn(List.of());
-    mockMvc.perform(get("/books"))
+  @DisplayName("GET /api/books/search - empty list returns 200 and [] in results")
+  void searchBooks_emptyList_returnsEmptyArrayInResults() throws Exception {
+    when(bookCacheService.searchBooksReactive(eq("*"), eq(0), anyInt(), eq(null), eq(null), eq(null))).thenReturn(Mono.just(Collections.emptyList()));
+    
+    org.springframework.test.web.servlet.MvcResult mvcResult = mockMvc.perform(get("/api/books/search").param("query", ""))
+      .andExpect(request().asyncStarted())
+      .andReturn();
+
+    mockMvc.perform(asyncDispatch(mvcResult))
       .andExpect(status().isOk())
       .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-      .andExpect(jsonPath("$", hasSize(0)));
+      .andExpect(jsonPath("$.results", hasSize(0)));
   }
 
   @Test
-  @DisplayName("GET /books - non-empty list returns 200 and array of books")
-  void getAllBooks_nonEmptyList_returnsArray() throws Exception {
-    Book book = new Book(1L, "Effective Java", "Joshua Bloch");
-    when(bookService.getAllBooks()).thenReturn(List.of(book));
-    mockMvc.perform(get("/books"))
+  @DisplayName("GET /api/books/search - non-empty list returns 200 and array of books in results")
+  void searchBooks_nonEmptyList_returnsArrayInResults() throws Exception {
+    Book book = createTestBook("1", "Effective Java", "Joshua Bloch");
+    when(bookCacheService.searchBooksReactive(eq("*"), eq(0), anyInt(), eq(null), eq(null), eq(null))).thenReturn(Mono.just(List.of(book)));
+    
+    org.springframework.test.web.servlet.MvcResult mvcResult = mockMvc.perform(get("/api/books/search").param("query", ""))
+      .andExpect(request().asyncStarted())
+      .andReturn();
+
+    mockMvc.perform(asyncDispatch(mvcResult))
       .andExpect(status().isOk())
-      .andExpect(jsonPath("$", hasSize(1)))
-      .andExpect(jsonPath("$[0].id").value(1))
-      .andExpect(jsonPath("$[0].title").value("Effective Java"))
-      .andExpect(jsonPath("$[0].author").value("Joshua Bloch"));
+      .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+      .andExpect(jsonPath("$.results", hasSize(1)))
+      .andExpect(jsonPath("$.results[0].id").value("1"))
+      .andExpect(jsonPath("$.results[0].title").value("Effective Java"))
+      .andExpect(jsonPath("$.results[0].authors[0]").value("Joshua Bloch"));
   }
 
   @Test
-  @DisplayName("GET /books/{id} - existing id returns 200 and book JSON")
+  @DisplayName("GET /api/books/{id} - existing id returns 200 and book JSON")
   void getBookById_found_returnsBook() throws Exception {
-    Book book = new Book(1L, "Domain-Driven Design", "Eric Evans");
-    when(bookService.getBookById(1L)).thenReturn(Optional.of(book));
-    mockMvc.perform(get("/books/1"))
+    Book book = createTestBook("1", "Domain-Driven Design", "Eric Evans");
+    when(bookCacheService.getBookByIdReactive("1")).thenReturn(Mono.just(book));
+
+    org.springframework.test.web.servlet.MvcResult mvcResult = mockMvc.perform(get("/api/books/1"))
+      .andExpect(request().asyncStarted())
+      .andReturn();
+
+    mockMvc.perform(asyncDispatch(mvcResult))
       .andExpect(status().isOk())
-      .andExpect(jsonPath("$.id").value(1))
+      .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+      .andExpect(jsonPath("$.id").value("1"))
       .andExpect(jsonPath("$.title").value("Domain-Driven Design"))
-      .andExpect(jsonPath("$.author").value("Eric Evans"));
+      .andExpect(jsonPath("$.authors[0]").value("Eric Evans"));
   }
 
   @Test
-  @DisplayName("GET /books/{id} - non-existent id returns 404")
+  @DisplayName("GET /api/books/{id} - non-existent id returns 404")
   void getBookById_notFound_returns404() throws Exception {
-    when(bookService.getBookById(99L)).thenReturn(Optional.empty());
-    mockMvc.perform(get("/books/99"))
+    when(bookCacheService.getBookByIdReactive("99")).thenReturn(Mono.empty());
+    
+    org.springframework.test.web.servlet.MvcResult mvcResult = mockMvc.perform(get("/api/books/99"))
+      .andExpect(request().asyncStarted())
+      .andReturn();
+
+    mockMvc.perform(asyncDispatch(mvcResult))
       .andExpect(status().isNotFound());
   }
 
   @Test
-  @DisplayName("POST /books - valid input returns 201 and created book")
+  @DisplayName("POST /api/books - valid input returns 201 and created book")
   void createBook_validInput_returnsCreated() throws Exception {
-    Book input = new Book(null, "Clean Code", "Robert C. Martin");
-    Book saved = new Book(1L, "Clean Code", "Robert C. Martin");
-    when(bookService.createBook(any(Book.class))).thenReturn(saved);
+    Book input = createTestBook(null, "Clean Code", "Robert C. Martin"); 
 
-    mockMvc.perform(post("/books")
-        .contentType(MediaType.APPLICATION_JSON)
-        .content(objectMapper.writeValueAsString(input)))
-      .andExpect(status().isCreated())
-      .andExpect(header().string("Location", containsString("/books/1")))
-      .andExpect(jsonPath("$.id").value(1))
-      .andExpect(jsonPath("$.title").value("Clean Code"))
-      .andExpect(jsonPath("$.author").value("Robert C. Martin"));
+    doAnswer(invocation -> {
+        Book bookArg = invocation.getArgument(0);
+        bookArg.setId("1"); 
+        return null; 
+    }).when(bookCacheService).cacheBook(any(Book.class));
+
+    org.springframework.test.web.servlet.MvcResult mvcResult = mockMvc.perform(post("/api/books")
+            .contentType(MediaType.APPLICATION_JSON)
+            .content(objectMapper.writeValueAsString(input)))
+        .andExpect(request().asyncStarted())
+        .andReturn();
+
+    mockMvc.perform(asyncDispatch(mvcResult))
+        .andExpect(status().isCreated()) 
+        .andExpect(header().string("Location", containsString("/api/books/1"))) 
+        .andExpect(jsonPath("$.id").value("1")) 
+        .andExpect(jsonPath("$.title").value("Clean Code"))
+        .andExpect(jsonPath("$.authors[0]").value("Robert C. Martin"));
   }
 
   @Test
-  @DisplayName("POST /books - invalid input returns 400")
+  @DisplayName("POST /api/books - invalid input returns 400")
   void createBook_invalidInput_returnsBadRequest() throws Exception {
-    Book invalid = new Book(null, "", "Author");
-    mockMvc.perform(post("/books")
-        .contentType(MediaType.APPLICATION_JSON)
-        .content(objectMapper.writeValueAsString(invalid)))
+    Book invalid = createTestBook(null, "", "Author"); 
+    Mockito.doThrow(new IllegalArgumentException("Title cannot be empty"))
+      .when(bookCacheService).cacheBook(any(Book.class));
+      
+    org.springframework.test.web.servlet.MvcResult mvcResult = mockMvc.perform(post("/api/books")
+            .contentType(MediaType.APPLICATION_JSON)
+            .content(objectMapper.writeValueAsString(invalid)))
+        .andExpect(request().asyncStarted())
+        .andReturn();
+        
+    mockMvc.perform(asyncDispatch(mvcResult))
       .andExpect(status().isBadRequest());
   }
 
   @Test
-  @DisplayName("PUT /books/{id} - existing id returns 200 and updated book")
+  @DisplayName("PUT /api/books/{id} - existing id returns 200 and updated book")
   void updateBook_found_returnsUpdated() throws Exception {
-    Book update = new Book(null, "Refactoring", "Martin Fowler");
-    Book updated = new Book(1L, "Refactoring", "Martin Fowler");
-    when(bookService.updateBook(eq(1L), any(Book.class))).thenReturn(Optional.of(updated));
-
-    mockMvc.perform(put("/books/1")
+    Book updatePayload = createTestBook(null, "Refactoring", "Martin Fowler"); 
+    mockMvc.perform(put("/api/books/1") 
         .contentType(MediaType.APPLICATION_JSON)
-        .content(objectMapper.writeValueAsString(update)))
-      .andExpect(status().isOk())
-      .andExpect(jsonPath("$.title").value("Refactoring"))
-      .andExpect(jsonPath("$.author").value("Martin Fowler"));
+        .content(objectMapper.writeValueAsString(updatePayload)))
+      .andExpect(status().isMethodNotAllowed());
   }
 
   @Test
-  @DisplayName("PUT /books/{id} - non-existent id returns 404")
+  @DisplayName("PUT /api/books/{id} - non-existent id returns 404")
   void updateBook_notFound_returns404() throws Exception {
-    when(bookService.updateBook(eq(99L), any(Book.class))).thenReturn(Optional.empty());
-    mockMvc.perform(put("/books/99")
+    Book updatePayload = createTestBook(null, "Non Existent", "Author");
+    mockMvc.perform(put("/api/books/99") 
         .contentType(MediaType.APPLICATION_JSON)
-        .content(objectMapper.writeValueAsString(new Book())))
-      .andExpect(status().isNotFound());
+        .content(objectMapper.writeValueAsString(updatePayload)))
+      .andExpect(status().isMethodNotAllowed());
   }
 
   @Test
-  @DisplayName("DELETE /books/{id} - existing id returns 204")
+  @DisplayName("DELETE /api/books/{id} - existing id returns 204")
   void deleteBook_found_returnsNoContent() throws Exception {
-    doNothing().when(bookService).deleteBook(1L);
-    mockMvc.perform(delete("/books/1"))
-      .andExpect(status().isNoContent());
+    mockMvc.perform(delete("/api/books/1")) 
+      .andExpect(status().isMethodNotAllowed());
   }
 
   @Test
-  @DisplayName("DELETE /books/{id} - non-existent id returns 404")
+  @DisplayName("DELETE /api/books/{id} - non-existent id returns 404")
   void deleteBook_notFound_returns404() throws Exception {
-    doThrow(new ResourceNotFoundException("Book not found"))
-      .when(bookService).deleteBook(99L);
-
-    mockMvc.perform(delete("/books/99"))
-      .andExpect(status().isNotFound());
+    mockMvc.perform(delete("/api/books/99")) 
+      .andExpect(status().isMethodNotAllowed());
   }
 }
